# python-project-52

./: .env  .env.example  .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pyci.yml
locale/en/LC_MESSAGES/: django.mo  django.po
task_manager/: admin.py  forms.py  mixins.py  models.py  settings.py  test_container.py  tests.py  urls.py  views.py  wsgi.py
task_manager/fixtures/: labels.json  statuses.json
task_manager/labels/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/tests/: test_forms.py  test_html.py  test_models.py  test_views.py
task_manager/migrations/: 0001_initial.py  0002_rename_label_tasks_labels.py  0002_statuses.py  0003_tasks.py  0004_alter_tasks_author.py  0005_alter_tasks_executor_labels.py  0006_alter_labels_task.py  0007_remove_labels_task.py  0008_tasks_label.py
task_manager/statuses/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/task_manager/: settings.py  views.py
task_manager/tasks/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/templates/: base.html  delete.html  index.html  label_create.html  label_delete.html  label_update.html  labels.html  login.html  registration.html  status_create.html  status_delete.html  status_update.html  statuses.html  task_create.html  task_delete.html  task_description.html  task_update.html  tasks.html  update copy.html  update.html  users.html
task_manager/users/: admin.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
tests/: test_task_manager.py
(+37 files in other folders)
