[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Dddarknight <9801677@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
dj-database-url = "^1.0.0"
Django = "^4.1"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.3"
django-bootstrap4 = "^22.2"
django-debug-toolbar = "^3.6.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
